--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,7 @@
     <title>Gipsies Go Wild CMS</title>
   </head>
   <body>
-    <!-- Qui puoi aggiungere un div se vuoi -->
+    <!-- Decap CMS script -->
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </body>
 </html>
